feat: add footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             <p>I like to study and get new knowledge. <br>
                 I have some free time now and want to spend it with benefits for my future. <br>I have a desire to change my life, but I walk in the dark. I need help so I can come out into the light. </p>
         </section>
+        <footer>
+            <nav>
+                <a href="https://github.com/Angela131313">GitHab</a><br>
+                <a href="https://rs.school/images/rs_school_js.svg">The logo</a>
+                <a href="https://rs.school/js/">CourseRSSchool</a>
+            </nav>
+        </footer>
     </div>    
 </body>
 </html>
