feat: add footer styles

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         </section>
         <footer>
             <nav>
-                <a href="https://github.com/Angela131313">GitHab</a><br>
-                <a href="https://rs.school/images/rs_school_js.svg">The logo</a>
-                <a href="https://rs.school/js/">CourseRSSchool</a>
+                <a target="_blank" href="https://github.com/Angela131313">GitHab</a><br>
+                <img src="../rsschool-cv/rss.png" alt="logo" width="123px" height="46px"><br>
+                <a target="_blank" href="https://rs.school/js/">CourseRSSchool</a>
             </nav>
         </footer>
     </div>    
