fix: fix size logo

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <footer>
             <nav>
                 <a target="_blank" href="https://github.com/Angela131313">GitHab</a><br>
-                <img src="../rsschool-cv/rss.png" alt="logo" width="123px" height="46px"><br>
+                <img src="../rsschool-cv/rss.png" alt="logo" width="123" height="46"><br>
                 <a target="_blank" href="https://rs.school/js/">CourseRSSchool</a>
             </nav>
         </footer>
